--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="fr">
 
 <head>
@@ -66,8 +66,8 @@
             <!-- Formules de calcul placées après les définitions -->
             <div class="formulas">
                 <h3>Formules de calcul :</h3>
-                <p><strong>Précontrainte (P<sub>v</sub>) :</strong> P<sub>v</sub> = 0,8 × σ<sub>eb</sub> × A<sub>s</sub></p>
-                <p><strong>Couple de serrage (C) :</strong> C = 0,88 × K × d × σ<sub>eb</sub> × A<sub>s</sub> × 10<sup>−3</sup></p>
+                <p><strong>Précontrainte (P<sub>v</sub>) :</strong> P<sub>v</sub> = 0,7 × σ<sub>eb</sub> × A<sub>s</sub></p>
+                <p><strong>Couple de serrage (C) :</strong> C = 0,7 × K × d × σ<sub>eb</sub> × A<sub>s</sub> × 10<sup>−3</sup></p>
             </div>
         </div>
     </main>
